blogging-frontend-react/infra/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vite-auth-app-frontend-service
  labels:
    app: vite-auth-app-frontend
spec:
  selector:
    app: vite-auth-app-frontend # Matches the label on your Deployment's pods
  ports:
    - protocol: TCP
      port: 80 # The port the Service itself exposes (internal to the cluster)
      targetPort: 80 # The port on the container that the Service forwards traffic to
  type: ClusterIP # Only accessible within the cluster
